--- a/game.html
+++ b/game.html
@@ -72,9 +72,6 @@
       text-align: center;
       margin-bottom: 20px;
       position: relative; /* para posicionar o balão */
-      display: flex;
-      flex-direction: column;
-      align-items: center;
     }
 
     #robot-image {
@@ -97,23 +94,6 @@
       z-index: 999;
       text-align: center;
       font-size: 1rem;
-    }
-
-    /* BOTÃO "PRESS TO START" */
-    #press-to-start {
-      margin-top: 10px;
-      background-color: #fff;
-      color: #000;
-      border: none;
-      border-radius: 12px;
-      padding: 12px 20px;
-      font-weight: bold;
-      font-size: 1.1rem;
-      box-shadow: 2px 2px 6px rgba(0,0,0,0.1);
-      cursor: pointer;
-    }
-    #press-to-start:hover {
-      box-shadow: 2px 2px 8px rgba(0,0,0,0.2);
     }
 
     /* ÁREA PRINCIPAL (O JOGO, BOTÕES, ETC) */
@@ -207,18 +187,18 @@
 
     #active-players-count {
       font-size: 1rem;
-      color: #555;
+      color: #555; /* Cor mais suave */
     }
 
     #input-container {
-      text-align: center;
-      margin-top: 15px;
+      text-align: center; /* Centraliza o conteúdo */
+      margin-top: 15px;   /* Espaço acima do contêiner */
     }
 
     #guess-title {
-      font-size: 1.2rem;
-      color: #333;
-      font-weight: bold;
+      font-size: 1.2rem; 
+      color: #333;       
+      font-weight: bold; 
       margin-bottom: 4px;
     }
 
@@ -240,9 +220,9 @@
       width: 100%;
       max-width: 600px;
       min-height: 200px;
-      background: transparent;
+      background: transparent; 
       padding: 10px;
-      border: none;
+      border: none; 
       border-radius: 8px;
       display: flex;
       flex-direction: column;
@@ -271,7 +251,7 @@
       justify-content: center;
       align-items: center;
       color: #000;
-      cursor: pointer;
+      cursor: pointer; 
       box-shadow: 2px 2px 4px rgba(0,0,0,0.1);
       transition: background-color 0.3s, border-color 0.3s;
     }
@@ -281,11 +261,11 @@
       margin-left: 10px;
       font-style: italic;
       color: #666;
-      min-width: 80px;
+      min-width: 80px; 
       text-align: left;
     }
 
-    /* BOTÕES GERAIS */
+    /* BOTÕES */
     #try-button,
     #login-button,
     #invite-button-main {
@@ -313,7 +293,7 @@
     #login-button {
       background-color: #2196F3;
       color: #fff;
-      display: none;
+      display: none; 
     }
 
     #login-button:hover {
@@ -519,7 +499,6 @@
   </style>
 </head>
 <body>
-
   <!-- HEADER COM TÍTULO -->
   <header>
     <h1>Hannah Games</h1>
@@ -532,8 +511,6 @@
   <div id="robot-section">
     <img id="robot-image" src="imagens/robo_estatico.png" alt="Robot Samuel">
     <div id="robot-balloon"></div>
-    <!-- BOTÃO "Press to start" -->
-    <button id="press-to-start">Press to Start</button>
   </div>
 
   <!-- ÁREA PRINCIPAL (O JOGO) -->
@@ -605,7 +582,7 @@
 
   <script>
     /*******************************************************
-     * SCROLL PARA O TOPO AO CARREGAR
+     * 0) SCROLL PARA O TOPO AO CARREGAR
      *******************************************************/
     window.addEventListener("load", () => {
       // Rola sempre para o topo assim que a página carrega ou recarrega
@@ -616,14 +593,14 @@
      * 1) CONFIGURANDO FIREBASE
      *******************************************************/
     const firebaseConfig = {
-      apiKey: "XXX",
-      authDomain: "XXX",
-      databaseURL: "XXX",
-      projectId: "XXX",
-      storageBucket: "XXX",
-      messagingSenderId: "XXX",
-      appId: "XXX",
-      measurementId: "XXX"
+      apiKey: "AIzaSyDGgo2H_hDKXF88xN7XnLFNUj8ikMY7Xdc",
+      authDomain: "hannahenglishcourse.firebaseapp.com",
+      databaseURL: "https://hannahenglishcourse-default-rtdb.asia-southeast1.firebasedatabase.app",
+      projectId: "hannahenglishcourse",
+      storageBucket: "hannahenglishcourse.appspot.com",
+      messagingSenderId: "449818788486",
+      appId: "1:449818788486:web:8a49d3f68591e6fb3f0707",
+      measurementId: "G-07VVJG9LRS"
     };
     if (!firebase.apps.length) {
       firebase.initializeApp(firebaseConfig);
@@ -644,20 +621,19 @@
     let currentStatus    = "idle";
     let currentDifficulty= "easy";
     let totalPoints      = 0;
-    let totalGames       = 0;
+    let totalGames       = 0; 
     let attemptsArray    = [];
     let currentLetters   = [];
-    let activeIndex      = 0; // posição atual para digitação
+    let activeIndex      = 0;
 
-    const hiddenInput      = document.getElementById("hidden-input");
-    const board            = document.getElementById("board");
-    const robotImage       = document.getElementById("robot-image");
-    const robotBalloon     = document.getElementById("robot-balloon");
-    const pressToStart     = document.getElementById("press-to-start");
-    const backButton       = document.getElementById("back-button");
+    const hiddenInput   = document.getElementById("hidden-input");
+    const board         = document.getElementById("board");
+    const robotImage    = document.getElementById("robot-image");
+    const robotBalloon  = document.getElementById("robot-balloon");
+    const backButton    = document.getElementById("back-button");
     const inviteButtonMain = document.getElementById("invite-button-main");
-    const loginButton      = document.getElementById("login-button");
-    const tryButton        = document.getElementById("try-button");
+    const loginButton   = document.getElementById("login-button");
+    const tryButton     = document.getElementById("try-button");
 
     /*******************************************************
      * 3) CARREGAR OS DICIONÁRIOS
@@ -667,7 +643,6 @@
 
     async function loadDictionaries() {
       try {
-        // Ajuste suas URLs/diretórios conforme sua necessidade
         const oxfordResponse = await fetch("dictionaries/Oxford 3000 Word List.txt");
         if (!oxfordResponse.ok) {
           throw new Error(`Failed to load Oxford 3000 Word List: ${oxfordResponse.statusText}`);
@@ -696,25 +671,8 @@
 
     function speakText(text) {
       if (!text) return;
-
-      // Verificar se a voz en-US está disponível
-      let voices = synth.getVoices();
-      let chosenVoice = voices.find(v => v.lang.toLowerCase().includes("en-us"));
-      if (!chosenVoice) {
-        // Se não encontrar, exibe mensagem, mas não bloqueia
-        console.warn("No American English voice found. Please install/enable an en-US voice for a better experience.");
-      }
-
       const utterance = new SpeechSynthesisUtterance(text);
-      // Forçar a linguagem
-      utterance.lang = "en-US";
-
-      if (chosenVoice) {
-        utterance.voice = chosenVoice; 
-      } else {
-        // Aviso ao usuário caso não haja nenhuma voz en-US
-        alert("We couldn't find an American English voice installed.\n\nPlease consider installing or enabling an en-US voice for the best experience!");
-      }
+      utterance.lang  = "en-US";
 
       utterance.onstart = () => {
         robotImage.src = "imagens/robo_fala.gif";
@@ -727,7 +685,7 @@
         setTimeout(() => {
           robotBalloon.style.display = "none";
 
-          // Depois de qualquer fala, rola para o "Try" e foca nele
+          // Após cada fala inicial, rola para o botão "Try" e foca
           tryButton.scrollIntoView({ behavior: "smooth", block: "center" });
           tryButton.focus();
         }, 700);
@@ -763,54 +721,51 @@
     /*******************************************************
      * 6) LOGIN
      *******************************************************/
-    // Vamos carregar, mas só falamos depois que o usuário apertar o "Press to Start"
     auth.onAuthStateChanged(async (user) => {
       let playerRef = null;
 
+      // Se usuário está logado (não convidado)
       if (user) {
-        // Usuário logado
         userUid = user.uid;
         isGuest = false;
 
         const snap = await db.ref("usuarios/" + userUid).once("value");
         const data = snap.val() || {};
-        userName = data.nome || data.email || "User";
-        userRole = data.role || "";
+        userName   = data.nome || data.email || "User";
+        userRole   = data.role || "";
 
+        // Referência do jogador logado
         playerRef = db.ref("HannahGames/guessTheWord/players/" + userUid);
         playerRef.set({ name: userName, joinedAt: Date.now() });
+
+        // Fala de boas-vindas: SEM localStorage, sempre que a página for carregada
+        speakText(`Hello ${userName}! Take your guess and try to be the first to discover the hidden word. Use the Invite button to call your friends and make the game more fun!`);
+
       } else {
         // Usuário convidado
         userUid = null;
         isGuest = true;
-        userName = "Guest";
-        userRole = "";
+        userName= "Guest";
+        userRole= "";
 
+        // Gera ID único para convidado
         const guestId = `guest_${Date.now()}`;
         playerRef = db.ref("HannahGames/guessTheWord/players/" + guestId);
         playerRef.set({ name: "Guest", joinedAt: Date.now() });
+
+        // Fala para convidados: SEM localStorage, sempre
+        speakText("You're playing as a guest. Your progress won't be saved.");
       }
 
       if (playerRef) {
         playerRef.onDisconnect().remove();
       }
 
+      // Outras inicializações
       loadScoreboard();
       listenGameState();
       updateGameStats();
       updateLoginButtonVisibility();
-    });
-
-    /*******************************************************
-     * BOTÃO "Press to Start" EVENT
-     *******************************************************/
-    pressToStart.addEventListener("click", () => {
-      // Dependendo de isGuest
-      if (isGuest) {
-        speakText("You're playing as a guest. Your progress won't be saved.");
-      } else {
-        speakText(`Hello ${userName}! Take your guess and try to be the first to discover the hidden word. Use the Invite button to call your friends and make the game more fun!`);
-      }
     });
 
     /*******************************************************
@@ -820,11 +775,13 @@
       const gamesPlayedRef = db.ref("HannahGames/guessTheWord/gamesPlayed");
       const scoreDisplay   = document.getElementById("player-score-display");
 
+      // Atualizar "Total Games"
       gamesPlayedRef.on("value", (snapshot) => {
         const totalGames = snapshot.val() || 0;
         document.getElementById("ownerGamesCount").textContent = totalGames;
       });
 
+      // Mostrar pontuação se logado; esconder se convidado
       if (!isGuest && userUid) {
         db.ref("usuarios/" + userUid).on("value", (snapshot) => {
           const userData = snapshot.val() || {};
@@ -908,6 +865,7 @@
         }
       });
 
+      // Contador global de jogos jogados
       const gamesPlayedRef = db.ref("HannahGames/guessTheWord/gamesPlayed");
       gamesPlayedRef.on("value", (snapshot) => {
         const gamesPlayed = snapshot.val() || 0;
@@ -1062,7 +1020,7 @@
       const val = e.target.value.trim().toLowerCase();
       if (!val || currentStatus !== "in_progress" || !currentWord) return;
       if (val.length > currentWord.length) {
-        e.target.value = val.slice(0, currentWord.length);
+        e.target.value = val.slice(0, currentWord.length); 
       }
     });
 
