--- a/game - bom copy2.html
+++ b/game - bom copy2.html
@@ -219,7 +219,7 @@
     #board {
       width: 100%;
       max-width: 600px;
-      /* min-height: 200px; <-- REMOVIDO para começar apenas com o espaço necessário */
+      min-height: 200px;
       background: transparent; 
       padding: 10px;
       border: none; 
@@ -738,7 +738,7 @@
         playerRef = db.ref("HannahGames/guessTheWord/players/" + userUid);
         playerRef.set({ name: userName, joinedAt: Date.now() });
 
-        // Fala de boas-vindas
+        // Fala de boas-vindas: SEM localStorage, sempre que a página for carregada
         speakText(`Hello ${userName}! Take your guess and try to be the first to discover the hidden word. Use the Invite button to call your friends and make the game more fun!`);
 
       } else {
@@ -753,7 +753,7 @@
         playerRef = db.ref("HannahGames/guessTheWord/players/" + guestId);
         playerRef.set({ name: "Guest", joinedAt: Date.now() });
 
-        // Fala para convidados
+        // Fala para convidados: SEM localStorage, sempre
         speakText("You're playing as a guest. Your progress won't be saved.");
       }
 
@@ -965,8 +965,6 @@
     function renderAllAttempts() {
       board.innerHTML = "";
 
-      // Mantém a ordem do array (mais antiga primeiro, mais nova por último).
-      // Assim, a tentativa mais nova fica no final, próxima do campo "Take a guess!".
       attemptsArray.forEach((att) => {
         const rowDiv = document.createElement("div");
         rowDiv.classList.add("attempt-row");
